--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -3,14 +3,19 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "service",
     srcs = [
+        "http.go",
         "service.go",
         "website.go",
     ],
     importpath = "github.com/dupmanio/dupman/packages/api/service",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/api/dto",
         "//packages/api/model",
         "//packages/api/repository",
+        "@com_github_gin_gonic_gin//:gin",
+        "@com_github_go_playground_validator_v10//:validator",
+        "@com_github_jinzhu_copier//:copier",
         "@org_uber_go_fx//:fx",
     ],
 )
