--- a/packages/api/model/BUILD.bazel
+++ b/packages/api/model/BUILD.bazel
@@ -4,11 +4,14 @@ go_library(
     name = "model",
     srcs = [
         "base.go",
+        "key_pair.go",
         "website.go",
     ],
     importpath = "github.com/dupmanio/dupman/packages/api/model",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/api/sql/type",
+        "//packages/encryptor",
         "@com_github_google_uuid//:uuid",
         "@io_gorm_gorm//:gorm",
     ],
