--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "//packages/api/dto",
         "//packages/api/model",
         "//packages/api/repository",
+        "//packages/encryptor",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_go_playground_validator_v10//:validator",
         "@com_github_jinzhu_copier//:copier",
