--- a/packages/api/middleware/BUILD.bazel
+++ b/packages/api/middleware/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "middleware",
     srcs = [
+        "auth.go",
         "cors.go",
         "midleware.go",
     ],
@@ -10,8 +11,12 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//packages/api/config",
+        "//packages/api/constant",
         "//packages/api/server",
+        "//packages/api/service",
+        "@com_github_coreos_go_oidc_v3//oidc",
         "@com_github_gin_contrib_cors//:cors",
+        "@com_github_gin_gonic_gin//:gin",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_zap//:zap",
     ],
