--- a/packages/api/route/BUILD.bazel
+++ b/packages/api/route/BUILD.bazel
@@ -4,12 +4,14 @@ go_library(
     name = "route",
     srcs = [
         "route.go",
+        "user.go",
         "website.go",
     ],
     importpath = "github.com/dupmanio/dupman/packages/api/route",
     visibility = ["//visibility:public"],
     deps = [
         "//packages/api/controller",
+        "//packages/api/middleware",
         "//packages/api/server",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_zap//:zap",
