--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "http.go",
         "service.go",
+        "user.go",
         "website.go",
     ],
     importpath = "github.com/dupmanio/dupman/packages/api/service",
@@ -16,6 +17,7 @@ go_library(
         "//packages/encryptor",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_go_playground_validator_v10//:validator",
+        "@com_github_google_uuid//:uuid",
         "@com_github_jinzhu_copier//:copier",
         "@org_uber_go_fx//:fx",
     ],
