--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -11,10 +11,10 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/api/service",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/api/constant",
         "//packages/api/dto",
         "//packages/api/model",
         "//packages/api/repository",
-        "//packages/encryptor",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_go_playground_validator_v10//:validator",
         "@com_github_google_uuid//:uuid",
