--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
         "//packages/api/dto",
         "//packages/api/model",
         "//packages/api/repository",
+        "//packages/dbutils/pagination",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_go_playground_validator_v10//:validator",
         "@com_github_google_uuid//:uuid",
