--- a/packages/api/middleware/BUILD.bazel
+++ b/packages/api/middleware/BUILD.bazel
@@ -12,11 +12,14 @@ go_library(
     deps = [
         "//packages/api/config",
         "//packages/api/constant",
+        "//packages/api/model",
+        "//packages/api/repository",
         "//packages/api/server",
         "//packages/api/service",
         "@com_github_coreos_go_oidc_v3//oidc",
         "@com_github_gin_contrib_cors//:cors",
         "@com_github_gin_gonic_gin//:gin",
+        "@com_github_google_uuid//:uuid",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_zap//:zap",
     ],
