feat(api): implement system controller

--- a/packages/api/controller/BUILD.bazel
+++ b/packages/api/controller/BUILD.bazel
@@ -4,12 +4,14 @@ go_library(
     name = "controller",
     srcs = [
         "controller.go",
+        "system.go",
         "user.go",
         "website.go",
     ],
     importpath = "github.com/dupmanio/dupman/packages/api/controller",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/api/constant",
         "//packages/api/dto",
         "//packages/api/service",
         "//packages/dbutils/pagination",
