--- a/packages/api/route/BUILD.bazel
+++ b/packages/api/route/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "route",
     srcs = [
         "route.go",
+        "system.go",
         "user.go",
         "website.go",
     ],
