--- a/packages/api/controller/BUILD.bazel
+++ b/packages/api/controller/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//packages/api/service",
         "//packages/dbutils/pagination",
         "@com_github_gin_gonic_gin//:gin",
+        "@com_github_google_uuid//:uuid",
         "@org_uber_go_fx//:fx",
     ],
 )
