--- a/packages/api/dto/BUILD.bazel
+++ b/packages/api/dto/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "dto",
     srcs = [
         "http.go",
+        "update.go",
         "user.go",
         "website.go",
     ],
