--- a/packages/api/controller/BUILD.bazel
+++ b/packages/api/controller/BUILD.bazel
@@ -12,9 +12,9 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//packages/api/constant",
-        "//packages/api/dto",
         "//packages/api/service",
         "//packages/dbutils/pagination",
+        "//packages/domain/dto",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_google_uuid//:uuid",
         "@org_uber_go_fx//:fx",
