--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -12,11 +12,11 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//packages/api/constant",
-        "//packages/api/dto",
         "//packages/api/model",
         "//packages/api/repository",
         "//packages/api/sql/type",
         "//packages/dbutils/pagination",
+        "//packages/domain/dto",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_go_playground_validator_v10//:validator",
         "@com_github_google_uuid//:uuid",
