--- a/packages/sdk/service/website/BUILD.bazel
+++ b/packages/sdk/service/website/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/sdk/service/website",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/dbutils/pagination",
         "//packages/domain/dto",
         "//packages/sdk/dupman/session",
         "//packages/sdk/internal/errors",
