--- a/packages/api/controller/BUILD.bazel
+++ b/packages/api/controller/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "//packages/domain/dto",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_google_uuid//:uuid",
+        "@com_github_jinzhu_copier//:copier",
         "@org_uber_go_fx//:fx",
     ],
 )
