--- a/packages/api/controller/BUILD.bazel
+++ b/packages/api/controller/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
         "//packages/api/service",
         "//packages/dbutils/pagination",
         "//packages/domain/dto",
+        "//packages/domain/errors",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_google_uuid//:uuid",
         "@com_github_jinzhu_copier//:copier",
