--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "//packages/api/sql/type",
         "//packages/dbutils/pagination",
         "//packages/domain/dto",
+        "//packages/domain/errors",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_go_playground_validator_v10//:validator",
         "@com_github_google_uuid//:uuid",
