--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -21,13 +21,13 @@
     "date-fns": "^2.30.0",
     "eslint": "^8.46.0",
     "eslint-config-next": "^13.4.13",
+    "formik": "^2.4.3",
     "next": "13.4.12",
     "next-auth": "^4.22.3",
     "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.4",
     "swr": "^2.2.0",
     "yup": "^1.2.0"
   },
