--- a/packages/api/controller/BUILD.bazel
+++ b/packages/api/controller/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//packages/api/constant",
         "//packages/api/model",
         "//packages/api/service",
+        "//packages/common/service",
         "//packages/dbutils/pagination",
         "//packages/domain/dto",
         "//packages/domain/errors",
