--- a/packages/api/middleware/BUILD.bazel
+++ b/packages/api/middleware/BUILD.bazel
@@ -16,8 +16,9 @@ go_library(
         "//packages/api/repository",
         "//packages/api/server",
         "//packages/api/service",
+        "//packages/auth",
+        "//packages/common/service",
         "//packages/domain/errors",
-        "@com_github_coreos_go_oidc_v3//oidc",
         "@com_github_gin_contrib_cors//:cors",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_google_uuid//:uuid",
