--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -3,7 +3,6 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "service",
     srcs = [
-        "http.go",
         "service.go",
         "user.go",
         "website.go",
@@ -15,11 +14,10 @@ go_library(
         "//packages/api/model",
         "//packages/api/repository",
         "//packages/api/sql/type",
+        "//packages/common/service",
         "//packages/dbutils/pagination",
-        "//packages/domain/dto",
         "//packages/domain/errors",
         "@com_github_gin_gonic_gin//:gin",
-        "@com_github_go_playground_validator_v10//:validator",
         "@com_github_google_uuid//:uuid",
         "@org_uber_go_fx//:fx",
     ],
