--- a/packages/sdk/service/website/BUILD.bazel
+++ b/packages/sdk/service/website/BUILD.bazel
@@ -10,5 +10,6 @@ go_library(
         "//packages/domain/dto",
         "//packages/sdk/dupman/session",
         "//packages/sdk/internal/errors",
+        "@com_github_google_uuid//:uuid",
     ],
 )
