feat(sdk): implement RawTokenProvider

--- a/packages/sdk/dupman/credentials/BUILD.bazel
+++ b/packages/sdk/dupman/credentials/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "client_credentials_provider.go",
         "credentials.go",
+        "raw_token_provider.go",
     ],
     importpath = "github.com/dupmanio/dupman/packages/sdk/dupman/credentials",
     visibility = ["//visibility:public"],
