--- a/packages/sdk/dupman/credentials/BUILD.bazel
+++ b/packages/sdk/dupman/credentials/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/sdk/dupman/credentials",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/domain/errors",
         "@com_github_coreos_go_oidc_v3//oidc",
         "@org_golang_x_oauth2//:oauth2",
         "@org_golang_x_oauth2//clientcredentials",
