--- a/packages/domain/dto/BUILD.bazel
+++ b/packages/domain/dto/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "dto",
     srcs = [
         "http.go",
+        "notifier.go",
         "preview.go",
         "status.go",
         "system.go",
