--- a/packages/sdk/service/user/BUILD.bazel
+++ b/packages/sdk/service/user/BUILD.bazel
@@ -9,5 +9,6 @@ go_library(
         "//packages/domain/dto",
         "//packages/sdk/dupman/session",
         "//packages/sdk/internal/errors",
+        "@com_github_google_uuid//:uuid",
     ],
 )
