--- a/packages/common/service/BUILD.bazel
+++ b/packages/common/service/BUILD.bazel
@@ -15,12 +15,21 @@ go_library(
 
 go_library(
     name = "service",
-    srcs = ["http.go"],
+    srcs = [
+        "dupman_api.go",
+        "http.go",
+    ],
     importpath = "github.com/dupmanio/dupman/packages/common/service",
     visibility = ["//visibility:public"],
     deps = [
         "//packages/dbutils/pagination",
         "//packages/domain/dto",
+        "//packages/sdk/dupman",
+        "//packages/sdk/dupman/credentials",
+        "//packages/sdk/dupman/session",
+        "//packages/sdk/service/system",
+        "//packages/sdk/service/user",
+        "//packages/sdk/service/website",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_go_playground_validator_v10//:validator",
     ],
