--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -26,6 +26,8 @@ linters:
     - ireturn
     - exhaustruct
     - tagliatelle
+    - tagalign
+    - depguard
 
     # Deprecated.
     - exhaustivestruct
