--- a/packages/sdk/dupman/session/BUILD.bazel
+++ b/packages/sdk/dupman/session/BUILD.bazel
@@ -7,7 +7,6 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//packages/sdk/dupman",
-        "//packages/sdk/internal/errors",
-        "@com_github_go_resty_resty_v2//:resty",
+        "@org_golang_x_oauth2//:oauth2",
     ],
 )
