--- a/packages/sdk/service/system/BUILD.bazel
+++ b/packages/sdk/service/system/BUILD.bazel
@@ -9,7 +9,9 @@ go_library(
         "//packages/common/pagination",
         "//packages/domain/dto",
         "//packages/sdk/dupman/session",
+        "//packages/sdk/internal/client",
         "//packages/sdk/internal/errors",
+        "@com_github_go_resty_resty_v2//:resty",
         "@com_github_google_uuid//:uuid",
     ],
 )
