--- a/packages/notifier/processor/BUILD.bazel
+++ b/packages/notifier/processor/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "//packages/notifier/config",
         "//packages/notifier/deliverer",
         "//packages/notifier/deliverer/email",
+        "//packages/notifier/deliverer/notify",
         "//packages/sdk/dupman/credentials",
         "@com_github_google_uuid//:uuid",
         "@com_github_rabbitmq_amqp091_go//:amqp091-go",
