feat(api): implement basic website status notification

--- a/packages/api/server/BUILD.bazel
+++ b/packages/api/server/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/api/server",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/api/broker",
         "//packages/api/config",
         "@com_github_gin_contrib_zap//:zap",
         "@com_github_gin_gonic_gin//:gin",
