--- a/packages/api/BUILD.bazel
+++ b/packages/api/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/api",
     visibility = ["//visibility:private"],
     deps = [
+        "//packages/api/broker",
         "//packages/api/config",
         "//packages/api/controller",
         "//packages/api/database",
