--- a/packages/api/controller/BUILD.bazel
+++ b/packages/api/controller/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/api/controller",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/api/broker",
         "//packages/api/constant",
         "//packages/api/model",
         "//packages/api/service",
