--- a/packages/auth/BUILD.bazel
+++ b/packages/auth/BUILD.bazel
@@ -7,8 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//packages/auth/constant",
-        "//packages/domain/errors",
-        "@com_github_coreos_go_oidc_v3//oidc",
         "@com_github_gin_gonic_gin//:gin",
+        "@com_github_golang_jwt_jwt_v5//:jwt",
     ],
 )
