--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -10,12 +10,14 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/api/service",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/api/broker",
         "//packages/api/constant",
         "//packages/api/model",
         "//packages/api/repository",
         "//packages/api/sql/type",
         "//packages/common/pagination",
         "//packages/common/service",
+        "//packages/domain/dto",
         "//packages/domain/errors",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_google_uuid//:uuid",
