refactor: migrate website status checking to async scheduler-worker architecture

--- a/packages/domain/dto/BUILD.bazel
+++ b/packages/domain/dto/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "notification.go",
         "notifier.go",
         "preview.go",
+        "scanner.go",
         "status.go",
         "system.go",
         "update.go",
