refactor: move messaging to abstraction

--- a/packages/api/server/BUILD.bazel
+++ b/packages/api/server/BUILD.bazel
@@ -6,8 +6,8 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/api/server",
     visibility = ["//visibility:public"],
     deps = [
-        "//packages/api/broker",
         "//packages/api/config",
+        "//packages/api/service",
         "@com_github_gin_contrib_zap//:zap",
         "@com_github_gin_gonic_gin//:gin",
         "@org_uber_go_fx//:fx",
