--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "service",
     srcs = [
+        "messenger.go",
         "service.go",
         "user.go",
         "website.go",
@@ -10,11 +11,12 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/api/service",
     visibility = ["//visibility:public"],
     deps = [
-        "//packages/api/broker",
+        "//packages/api/config",
         "//packages/api/constant",
         "//packages/api/model",
         "//packages/api/repository",
         "//packages/api/sql/type",
+        "//packages/common/broker",
         "//packages/common/pagination",
         "//packages/common/service",
         "//packages/domain/dto",
