--- a/packages/notifier/worker/BUILD.bazel
+++ b/packages/notifier/worker/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//packages/notifier/processor",
+        "//packages/notifier/service",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_zap//:zap",
     ],
