--- a/packages/api/server/BUILD.bazel
+++ b/packages/api/server/BUILD.bazel
@@ -8,8 +8,10 @@ go_library(
     deps = [
         "//packages/api/config",
         "//packages/api/service",
+        "//packages/common/otel",
         "@com_github_gin_contrib_zap//:zap",
         "@com_github_gin_gonic_gin//:gin",
+        "@io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin//:otelgin",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_zap//:zap",
     ],
