--- a/packages/api/BUILD.bazel
+++ b/packages/api/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "//packages/api/route",
         "//packages/api/server",
         "//packages/api/service",
+        "//packages/common/logger",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_fx//fxevent",
         "@org_uber_go_zap//:zap",
