--- a/packages/scanner-scheduler/BUILD.bazel
+++ b/packages/scanner-scheduler/BUILD.bazel
@@ -9,10 +9,10 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/scanner-scheduler",
     visibility = ["//visibility:private"],
     deps = [
+        "//packages/common/logger",
         "//packages/scanner-scheduler/config",
         "//packages/scanner-scheduler/messenger",
         "//packages/scanner-scheduler/scheduler",
-        "@org_uber_go_zap//:zap",
     ],
 )
 
