--- a/packages/scanner/BUILD.bazel
+++ b/packages/scanner/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/scanner",
     visibility = ["//visibility:private"],
     deps = [
+        "//packages/common/logger",
         "//packages/scanner/config",
         "//packages/scanner/fetcher",
         "//packages/scanner/processor",
