--- a/packages/notify/database/BUILD.bazel
+++ b/packages/notify/database/BUILD.bazel
@@ -6,9 +6,11 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/notify/database",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/common/logger/wrapper",
         "//packages/notify/config",
         "@io_gorm_driver_postgres//:postgres",
         "@io_gorm_gorm//:gorm",
         "@io_gorm_plugin_opentelemetry//tracing",
+        "@org_uber_go_zap//:zap",
     ],
 )
