--- a/packages/common/logger/wrapper/BUILD.bazel
+++ b/packages/common/logger/wrapper/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "wrapper",
     srcs = [
+        "fx.go",
         "gin.go",
         "gorm.go",
     ],
@@ -13,8 +14,7 @@ go_library(
         "@com_github_gin_gonic_gin//:gin",
         "@io_gorm_gorm//logger",
         "@io_gorm_gorm//utils",
-        "@io_opentelemetry_go_otel_trace//:trace",
+        "@org_uber_go_fx//fxevent",
         "@org_uber_go_zap//:zap",
-        "@org_uber_go_zap//zapcore",
     ],
 )
