--- a/packages/notifier/BUILD.bazel
+++ b/packages/notifier/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//packages/common/logger",
+        "//packages/common/logger/wrapper",
         "//packages/notifier/config",
         "//packages/notifier/deliverer",
         "//packages/notifier/processor",
