--- a/packages/notify/server/BUILD.bazel
+++ b/packages/notify/server/BUILD.bazel
@@ -6,9 +6,9 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/notify/server",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/common/logger/wrapper",
         "//packages/common/otel",
         "//packages/notify/config",
-        "@com_github_gin_contrib_zap//:zap",
         "@com_github_gin_gonic_gin//:gin",
         "@io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin//:otelgin",
         "@org_uber_go_fx//:fx",
