refactor: refactor Open Telemetry integration

--- a/packages/api/BUILD.bazel
+++ b/packages/api/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
         "//packages/api/service",
         "//packages/common/logger",
         "//packages/common/logger/wrapper",
+        "//packages/common/otel",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_fx//fxevent",
         "@org_uber_go_zap//:zap",
