--- a/packages/notify/database/BUILD.bazel
+++ b/packages/notify/database/BUILD.bazel
@@ -7,10 +7,10 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//packages/common/logger/wrapper",
+        "//packages/common/otel",
         "//packages/notify/config",
         "@io_gorm_driver_postgres//:postgres",
         "@io_gorm_gorm//:gorm",
-        "@io_gorm_plugin_opentelemetry//tracing",
         "@org_uber_go_zap//:zap",
     ],
 )
