--- a/packages/notify/route/BUILD.bazel
+++ b/packages/notify/route/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "//packages/notify/controller",
         "//packages/notify/middleware",
         "//packages/notify/server",
+        "@io_opentelemetry_go_otel//semconv/v1.21.0:v1_21_0",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_zap//:zap",
     ],
