--- a/packages/preview-api/BUILD.bazel
+++ b/packages/preview-api/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//packages/common/logger",
         "//packages/common/logger/wrapper",
+        "//packages/common/otel",
         "//packages/preview-api/config",
         "//packages/preview-api/controller",
         "//packages/preview-api/middleware",
