--- a/packages/api/server/BUILD.bazel
+++ b/packages/api/server/BUILD.bazel
@@ -11,7 +11,7 @@ go_library(
         "//packages/common/logger/wrapper",
         "//packages/common/otel",
         "@com_github_gin_gonic_gin//:gin",
-        "@io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin//:otelgin",
+        "@io_opentelemetry_go_otel//semconv/v1.21.0:v1_21_0",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_zap//:zap",
     ],
