--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -12,16 +12,15 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//packages/api/config",
-        "//packages/api/constant",
         "//packages/api/model",
         "//packages/api/repository",
         "//packages/api/sql/type",
         "//packages/common/broker",
+        "//packages/common/otel",
         "//packages/common/pagination",
         "//packages/common/service",
         "//packages/domain/dto",
         "//packages/domain/errors",
-        "@com_github_gin_gonic_gin//:gin",
         "@com_github_google_uuid//:uuid",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_zap//:zap",
