--- a/packages/common/broker/BUILD.bazel
+++ b/packages/common/broker/BUILD.bazel
@@ -6,7 +6,12 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/common/broker",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/common/otel",
         "@com_github_google_uuid//:uuid",
         "@com_github_rabbitmq_amqp091_go//:amqp091-go",
+        "@io_opentelemetry_go_otel//attribute",
+        "@io_opentelemetry_go_otel//semconv/v1.21.0:v1_21_0",
+        "@io_opentelemetry_go_otel_metric//:metric",
+        "@io_opentelemetry_go_otel_trace//:trace",
     ],
 )
