--- a/packages/common/logger/wrapper/BUILD.bazel
+++ b/packages/common/logger/wrapper/BUILD.bazel
@@ -10,11 +10,15 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/common/logger/wrapper",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/common/otel",
         "@com_github_gin_contrib_zap//:zap",
         "@com_github_gin_gonic_gin//:gin",
         "@io_gorm_gorm//logger",
         "@io_gorm_gorm//utils",
+        "@io_opentelemetry_go_otel//semconv/v1.21.0:v1_21_0",
+        "@io_opentelemetry_go_otel_trace//:trace",
         "@org_uber_go_fx//fxevent",
         "@org_uber_go_zap//:zap",
+        "@org_uber_go_zap//zapcore",
     ],
 )
