--- a/packages/common/service/BUILD.bazel
+++ b/packages/common/service/BUILD.bazel
@@ -16,12 +16,17 @@ go_library(
 go_library(
     name = "service",
     srcs = [
+        "auth.go",
         "dupman_api.go",
         "http.go",
     ],
     importpath = "github.com/dupmanio/dupman/packages/common/service",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/api/constant",
+        "//packages/api/model",
+        "//packages/auth/constant",
+        "//packages/common/otel",
         "//packages/common/pagination",
         "//packages/domain/dto",
         "//packages/sdk/dupman",
@@ -33,5 +38,9 @@ go_library(
         "//packages/sdk/service/website",
         "@com_github_gin_gonic_gin//:gin",
         "@com_github_go_playground_validator_v10//:validator",
+        "@com_github_google_uuid//:uuid",
+        "@io_opentelemetry_go_otel//attribute",
+        "@io_opentelemetry_go_otel//semconv/v1.21.0:v1_21_0",
+        "@io_opentelemetry_go_otel_trace//:trace",
     ],
 )
