--- a/packages/notify/BUILD.bazel
+++ b/packages/notify/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//packages/common/logger",
         "//packages/common/logger/wrapper",
+        "//packages/common/otel",
         "//packages/notify/config",
         "//packages/notify/controller",
         "//packages/notify/database",
