--- a/packages/notify/service/BUILD.bazel
+++ b/packages/notify/service/BUILD.bazel
@@ -9,7 +9,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/notify/service",
     visibility = ["//visibility:public"],
     deps = [
-        "//packages/auth/constant",
+        "//packages/common/otel",
         "//packages/common/pagination",
         "//packages/common/service",
         "//packages/domain/dto",
@@ -17,7 +17,6 @@ go_library(
         "//packages/notify/config",
         "//packages/notify/model",
         "//packages/notify/repository",
-        "@com_github_gin_gonic_gin//:gin",
         "@com_github_google_uuid//:uuid",
         "@com_github_redis_go_redis_v9//:go-redis",
         "@org_uber_go_fx//:fx",
