--- a/packages/preview-api/controller/BUILD.bazel
+++ b/packages/preview-api/controller/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/preview-api/controller",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/common/otel",
         "//packages/common/service",
         "//packages/domain/dto",
         "//packages/preview-api/service",
