--- a/packages/preview-api/service/BUILD.bazel
+++ b/packages/preview-api/service/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/preview-api/service",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/common/otel",
         "//packages/common/service",
         "//packages/preview-api/config",
         "@com_github_chromedp_cdproto//inspector",
