--- a/packages/scanner-scheduler/scheduler/BUILD.bazel
+++ b/packages/scanner-scheduler/scheduler/BUILD.bazel
@@ -24,6 +24,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/scanner-scheduler/scheduler",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/common/otel",
         "//packages/domain/dto",
         "//packages/encryptor",
         "//packages/scanner-scheduler/config",
