--- a/packages/scanner/BUILD.bazel
+++ b/packages/scanner/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//packages/common/logger",
         "//packages/common/logger/wrapper",
+        "//packages/common/otel",
         "//packages/scanner/config",
         "//packages/scanner/fetcher",
         "//packages/scanner/processor",
