--- a/packages/scanner/processor/BUILD.bazel
+++ b/packages/scanner/processor/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/scanner/processor",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/common/otel",
         "//packages/common/service",
         "//packages/domain/dto",
         "//packages/scanner/config",
@@ -16,6 +17,8 @@ go_library(
         "@com_github_google_uuid//:uuid",
         "@com_github_jinzhu_copier//:copier",
         "@com_github_rabbitmq_amqp091_go//:amqp091-go",
+        "@io_opentelemetry_go_otel//semconv/v1.21.0:v1_21_0",
+        "@io_opentelemetry_go_otel_trace//:trace",
         "@org_uber_go_zap//:zap",
     ],
 )
