--- a/.bazelrc
+++ b/.bazelrc
@@ -1,1 +1,1 @@
-build --host_cxxopt='-std=c++14' --java_language_version=17
+build --host_cxxopt='-std=c++14' --java_language_version=17 --stamp --workspace_status_command=./scripts/status.sh
