--- a/packages/notify/server/BUILD.bazel
+++ b/packages/notify/server/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/notify/server",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/common/helper/fx",
         "//packages/common/logger/wrapper",
         "//packages/common/otel",
         "//packages/notify/config",
