--- a/packages/preview-api/route/BUILD.bazel
+++ b/packages/preview-api/route/BUILD.bazel
@@ -9,9 +9,11 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/preview-api/route",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/common/helper/fx",
+        "//packages/common/otel",
         "//packages/preview-api/controller",
         "//packages/preview-api/middleware",
-        "//packages/preview-api/server",
+        "@com_github_gin_gonic_gin//:gin",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_zap//:zap",
     ],
