--- a/packages/preview-api/server/BUILD.bazel
+++ b/packages/preview-api/server/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/preview-api/server",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/common/helper/fx",
         "//packages/common/logger/wrapper",
         "//packages/common/otel",
         "//packages/preview-api/config",
