refactor: move database connection to common package

--- a/packages/api/BUILD.bazel
+++ b/packages/api/BUILD.bazel
@@ -11,13 +11,13 @@ go_library(
     deps = [
         "//packages/api/config",
         "//packages/api/controller",
-        "//packages/api/database",
         "//packages/api/middleware",
         "//packages/api/repository",
         "//packages/api/route",
         "//packages/api/server",
         "//packages/api/service",
         "//packages/api/version",
+        "//packages/common/database",
         "//packages/common/helper/fx",
         "//packages/common/logger",
         "//packages/common/logger/wrapper",
