--- a/packages/api/repository/BUILD.bazel
+++ b/packages/api/repository/BUILD.bazel
@@ -14,8 +14,8 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//packages/api/constant",
-        "//packages/api/database",
         "//packages/api/model",
+        "//packages/common/database",
         "//packages/common/pagination",
         "@com_github_google_uuid//:uuid",
         "@io_gorm_gorm//:gorm",
