--- a/packages/notify/BUILD.bazel
+++ b/packages/notify/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//packages/common/logger",
         "//packages/common/logger/wrapper",
         "//packages/common/otel",
+        "//packages/common/server",
         "//packages/notify/config",
         "//packages/notify/controller",
         "//packages/notify/middleware",
