refactor: implement app directory

--- a/packages/api/BUILD.bazel
+++ b/packages/api/BUILD.bazel
@@ -9,20 +9,8 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/api",
     visibility = ["//visibility:private"],
     deps = [
-        "//packages/api/config",
-        "//packages/api/controller",
-        "//packages/api/middleware",
-        "//packages/api/repository",
-        "//packages/api/route",
-        "//packages/api/server",
-        "//packages/api/service",
-        "//packages/api/version",
-        "//packages/common/database",
-        "//packages/common/helper/fx",
-        "//packages/common/logger",
+        "//packages/api/app",
         "//packages/common/logger/wrapper",
-        "//packages/common/otel",
-        "//packages/common/server",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_fx//fxevent",
         "@org_uber_go_zap//:zap",
