--- a/packages/notify/BUILD.bazel
+++ b/packages/notify/BUILD.bazel
@@ -9,20 +9,8 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/notify",
     visibility = ["//visibility:private"],
     deps = [
-        "//packages/common/database",
-        "//packages/common/helper/fx",
-        "//packages/common/logger",
         "//packages/common/logger/wrapper",
-        "//packages/common/otel",
-        "//packages/common/server",
-        "//packages/notify/config",
-        "//packages/notify/controller",
-        "//packages/notify/middleware",
-        "//packages/notify/repository",
-        "//packages/notify/route",
-        "//packages/notify/server",
-        "//packages/notify/service",
-        "//packages/notify/version",
+        "//packages/notify/app",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_fx//fxevent",
         "@org_uber_go_zap//:zap",
