--- a/packages/common/helper/fx/BUILD.bazel
+++ b/packages/common/helper/fx/BUILD.bazel
@@ -1,23 +1,17 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
-    name = "gin",
-    srcs = ["route.go"],
-    importpath = "github.com/dupmanio/dupman/packages/common/helper/gin",
-    visibility = ["//visibility:public"],
-    deps = [
-        "@com_github_gin_gonic_gin//:gin",
-        "@org_uber_go_fx//:fx",
-    ],
-)
-
-go_library(
     name = "fx",
-    srcs = ["route.go"],
+    srcs = [
+        "migrator.go",
+        "route.go",
+    ],
     importpath = "github.com/dupmanio/dupman/packages/common/helper/fx",
     visibility = ["//visibility:public"],
     deps = [
+        "//packages/common/otel",
         "@com_github_gin_gonic_gin//:gin",
         "@org_uber_go_fx//:fx",
+        "@org_uber_go_zap//:zap",
     ],
 )
