--- a/packages/notifier/BUILD.bazel
+++ b/packages/notifier/BUILD.bazel
@@ -9,14 +9,8 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/notifier",
     visibility = ["//visibility:private"],
     deps = [
-        "//packages/common/logger",
         "//packages/common/logger/wrapper",
-        "//packages/common/otel",
-        "//packages/notifier/config",
-        "//packages/notifier/deliverer",
-        "//packages/notifier/processor",
-        "//packages/notifier/service",
-        "//packages/notifier/version",
+        "//packages/notifier/app",
         "//packages/notifier/worker",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_fx//fxevent",
