--- a/packages/scanner/BUILD.bazel
+++ b/packages/scanner/BUILD.bazel
@@ -9,14 +9,8 @@ go_library(
     importpath = "github.com/dupmanio/dupman/packages/scanner",
     visibility = ["//visibility:private"],
     deps = [
-        "//packages/common/logger",
         "//packages/common/logger/wrapper",
-        "//packages/common/otel",
-        "//packages/scanner/config",
-        "//packages/scanner/fetcher",
-        "//packages/scanner/processor",
-        "//packages/scanner/service",
-        "//packages/scanner/version",
+        "//packages/scanner/app",
         "//packages/scanner/worker",
         "@org_uber_go_fx//:fx",
         "@org_uber_go_fx//fxevent",
