--- a/packages/api/service/BUILD.bazel
+++ b/packages/api/service/BUILD.bazel
@@ -5,7 +5,6 @@ go_library(
     srcs = [
         "messenger.go",
         "service.go",
-        "user.go",
         "website.go",
     ],
     importpath = "github.com/dupmanio/dupman/packages/api/service",
@@ -14,11 +13,11 @@ go_library(
         "//packages/api/config",
         "//packages/api/model",
         "//packages/api/repository",
-        "//packages/api/sql/type",
         "//packages/common/broker",
         "//packages/common/otel",
         "//packages/common/pagination",
         "//packages/common/service",
+        "//packages/common/vault",
         "//packages/domain/dto",
         "//packages/domain/errors",
         "@com_github_google_uuid//:uuid",
